force-app/main/default/objects/Nutrition_Tracker__c/Nutrition_Tracker__c.object-meta.xml
<CustomObject>
    <label>Nutrition Tracker</label>
    <nameField>
        <displayFormat>Tracker ID - {0000}</displayFormat>
        <label>Tracker ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nutrition Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>