force-app/main/default/objects/Nutrition_Tracker__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Nutrition Trackers</relationshipLabel>
    <relationshipName>Nutrition_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>