force-app/main/default/objects/Nutrition_Tracker__c/fields/Fats__c.field-meta.xml
<CustomField>
    <fullName>Fats__c</fullName>
    <label>Fats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>