force-app/main/default/objects/Nutrition_Tracker__c/fields/Food_Item__c.field-meta.xml
<CustomField>
    <fullName>Food_Item__c</fullName>
    <label>Food Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>