force-app/main/default/objects/Nutrition_Tracker__c/fields/Protein__c.field-meta.xml
<CustomField>
    <fullName>Protein__c</fullName>
    <label>Protein</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>