force-app/main/default/objects/Nutrition_Tracker__c/fields/Track_Date__c.field-meta.xml
<CustomField>
    <fullName>Track_Date__c</fullName>
    <label>Track Date</label>
    <type>Date</type>
</CustomField>